Fix word breaking on WP pages (#12233)
This commit touches the way words are broken in wp subjects, descriptions,
custom fields, and activity messages.

Previously, words would get broken randomly at the end of a line. This
behaviour is now improved. Words tend not to get broken unless there is
no space at all for the word to fit on a line without being broken.

However, this commit does not enable hyphenation for these places,
because `hyphens: auto;` causes the browser to break words more
aggressively.

--- a/frontend/src/global_styles/content/work_packages/single_view/_single_view.sass
+++ b/frontend/src/global_styles/content/work_packages/single_view/_single_view.sass
@@ -40,8 +40,8 @@
 
     .inline-edit--display-field
       white-space: normal
-      overflow-wrap: break-word
-      hyphens: auto
+      overflow-wrap: anywhere
+      word-break: normal
 
 // Subject field
 .wp-new--subject-wrapper
